# thrml-bio

./: .gitignore  LICENSE  README.md  prompt.md  pyproject.toml  run_experiments.sh
benchmarks/: convergance_curve.py  energy_efficiency_curve.py  energy_landscape.py  gene_expression_surface.py  model_accuracy.py  quality_vs_energy.py
benchmarks/mlp_baseline_torch/: metrics.csv  test_metrics.json
benchmarks/potts_ebm_jax/: metrics.csv  test_metrics.json
benchmarks/potts_ebm_thrml/: checkpoint_latest.pkl  metrics.csv  model_checkpoint.pkl  test_metrics.json
src/: train.py  utils.py
src/data/: preprocess.py  sample_data.py
src/models/: encoders.py  gaussian.py  mlp.py  potts.py  sampler.py
src/models/jax/: gaussian.py
src/models/thrml/: potts.py
src/thrml_bio/: __init__.py
