[project]
name = "thrml-bio"
version = "0.1.0"
description = "energy-based modeling on Arc Virtual Cell perturbation dataset"
readme = "README.md"
authors = [
    { name = "Bradley Woolf", email = "bradleymwoolf@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.0",
    "jax[cuda12]>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "scanpy>=1.11.5",
    "thrml>=0.1.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
